# find-the-ai-dash

./: .gitignore  LICENSE  README.md  pyproject.toml  seed.py
cache/: cache.db
dash_app/: .quotes.py.swp  app.py  quotes.py
dash_app/assets/: clientside.js
test/: sample_ai_quotes.json  sample_human_quotes.json  test_seed.py
